--- a/css/reuse.css
+++ b/css/reuse.css
@@ -85,3 +85,13 @@ button {
 .hidden {
   overflow: hidden;
 }
+
+.center {
+  position: fixed;
+  top: 0;
+  left: 0;
+  margin: auto;
+  width: 100%;
+  height: 100vh;
+  z-index: 55;
+}
